# voting2

./: README.md
rust/api/: Cargo.toml  Dockerfile  fly.toml
rust/api/src/: main.rs  model.rs
rust/api/src/model/: default.rs
